--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -8,45 +8,42 @@
 <link rel="stylesheet" href="https://use.typekit.net/itf6tgz.css">
 <link rel="stylesheet" href="https://use.typekit.net/lzl1qyk.css">
 <link rel="stylesheet" href="https://use.typekit.net/itf6tgz.css">
-
 <title>Entry 6</title>
-
 </head>
 
 <body>
 
 <h1>TaTa Bubble Gum</h1>
 
-<h2>The most famous bubble gum in China</h2>
+<h2>the most famous bubble gum in China</h2>
 
-<div class="roll"><marquee behavior="alternate">----FUN AND TASTY----FUN AND TASTY----FUN AND TASTY----</marquee><div>
-
+<div class="roll"><marquee behavior="alternate">----FUN AND TASTY----FUN AND TASTY----FUN AND TASTY----FUN AND TASTY----FUN AND TASTY----</marquee><div>
 
 <div class="flex-container">
-  <div class="flex-item-left"><p>In 1989, the TaTa Bubble Gum came out in China. At first, it was just a regular square bubble gum. Then the “TaTa Roll” came out in 1993. In 2005, “TaTa Roll" innovated the bubble gum roll that could be cut off by its outer package. The roll was 1.2 meters long, and children could control the length of the bubble gum. Children loved this creative design. When I was a child, I enjoyed holding the TaTa Roll in my hand, opening the package quickly to make a click, pulling out the length I wanted, then using the package to cut the bubble gum and make a click. This process was very satisfying.<br><br>
-  When I was in primary school, everyone in my class could blow bubbles successfully by eating the TaTa Bubble Gum. We often competed to blow bubble gum and compared who blew the biggest bubble. I remember a boy in my class who was very good at blowing bubbles, he once blew a bubble that was bigger than his face, and the bubble burst and stuck to his face. We laughed at him all day.
+  <div class="flex-left"><p>In 1989, the TaTa Bubble Gum came out in China. At first, it was just a regular square bubble gum. Then the “TaTa Roll” came out in 1993. In 2005, “TaTa Roll" innovated the bubble gum roll that could be cut off by its outer packaging. The roll was 1.2 meters long, and children could control the length of the bubble gum. They loved this creative design. When I was a child, I enjoyed holding a TaTa Roll in my hand, opening the packaging quickly to make a click, pulling out the length I wanted, and then using the sharp edge of the packaging to cut the bubble gum and make a click. This process was very satisfying.
   <br><br>
-  TaTa Bubble Gum was not only popular among children, but it was also a good helper for cashiers. When cashiers couldn't make a change, they often gave consumers some bubble gums instead of change. As a kid, I even wanted the cashier to give me some bubble gums rather than money. However, there are more types of snacks now, so the TaTa Bubble Gum is no longer the most popular product. People use mobile phones to pay, which makes TaTa Bubble Gum have no chance to appear. Speaking of which, I haven't eaten bubble gum for a long time, I wonder if I can still blow big bubbles now?</p></div>
-
+  When I was in primary school, everyone in my class could blow bubbles successfully by using the TaTa Bubble Gum. We often competed to blow bubble gum and compared who blew the biggest bubble. I still remember a boy in my class who was very good at blowing bubbles, he once blew a bubble that was bigger than his face, and the bubble burst and stuck to his face. We laughed at him all day.
+  <br><br>
+  TaTa Bubble Gum was not only popular among children, but also a good helper for cashiers. When cashiers couldn't make a change, they often gave customers some bubble gums instead of change. As a kid, I even wanted the cashier to give me some bubble gum rather than money. However, there are more types of snacks now, so the TaTa Bubble Gum is no longer the most popular product. People use mobile phones to pay, which makes TaTa Bubble Gum have no chance to show up during the change. Speaking of which, I haven't eaten bubble gum for a long time, I wonder if I can still blow big bubbles now?</p></div>
 
 <div class="flip-box">
-  <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <div class="flex-item-right"><img src="pt.png" alt=" " width="460" height="380"></div>
+  <div class="flip-inner">
+    <div class="flip-front">
+      <div class="flex-right"><img src="pt.png" alt="TaTa Bubble Gum" width="520" height="430"></div>
     </div>
-    <div class="flip-box-back">
+    <div class="flip-back">
       <p>DECIDE THE LENGTH YOU WANT!</p>
     </div>
   </div>
 </div>
 
- 
  <footer>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">previous</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
+    <br>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">next</a>
   </footer>
-  
 
 </body>
 </html>
