--- a/entries/entry10/index.html
+++ b/entries/entry10/index.html
@@ -23,6 +23,7 @@
 <button id="togglebutton" onclick="toggleimage()">choose your jelly sandals!</button>
 
 <div id="title"><h1>JELLY SANDALS</h1></div>
+<h2>a style of footwear that is made of plastic</h2>
 
 <div id="content">
 	<p>This kind of brightly colored jelly sandals used to be popular among children, as they always yearn for Cinderella's glass slippers. In the real world, we can't get expensive glass slippers, so these shining, cheap sandals suffice us. Most of these sandals are low-heeled, but some of them are high-heeled, decorated with gemstones and bowknots, just like Disney princesses' shoes, so this kind of high heels is often more popular among children. These sandals are soft and light. In the summer of ten years ago, it was common to see girls wearing them, stepping on the ground, and making a clatter. But the quality of jelly sandals is not that good, I've worn out a few pairs so I can prove that. In previous years, this kind of jelly sandals was always called ugly, but the recent rise of the Y2K fashion style has made some fashionistas wear their childhood favorite sandals again and present them in a new way.</p>
