--- a/entries/entry9/index.html
+++ b/entries/entry9/index.html
@@ -14,6 +14,7 @@
 <div class="container">
 
     <div class="title"><h1>WATER TOWER</h1></div>
+    <h2>an elevated structure supporting a water tank</h2>
 
     <div class="text">
         <p>The water tower is a tall structure used to store and distribute water. Water towers are common in cities, they successfully blend into the city yet stand out. Most of them are built without considering their aesthetics since they are just practical structures, but they have a special industrial aesthetic. The water tower is my favorite building. When I was a child, I didn’t know the function of a water tower, so I always thought it was a watchtower. I believed there was a lonely princess who lived inside the tower, always calmly watching everything happening around her, waiting to be rescued by a hero. If I went to the bottom of the tower and called her, she would put her long hair down and let me climb up. I also thought the water tower looked like a UFO. If I walked under it, I might be captured by aliens. Unfortunately, these old water towers are disappearing. The original intention of their design was to meet the actual needs of water supply in the early days of the cities. With the development of the cities, they are demolished as useless things after losing this value.</p>
