--- a/entries/entry8/index.html
+++ b/entries/entry8/index.html
@@ -11,22 +11,40 @@
 </head>
 
 <body>
-	<h1>FOAM PUZZLE MAT</h1>
-	<h3>soft mat for children</h3>
-	
-	<img id="mainImage" src="puzzle1.png" >
-
-	<div class="click"><marquee behavior="alternate" scrolldelay="10">click on the mat!</marquee></div>
-
-	<div class="text">
-		<p>This kind of foam puzzle mat was very popular when I was a child. Many families that had young children bought this mat because it was soft enough to protect children from falling and getting hurt. Children liked the bright colors on the mat. Also, many mats were printed with numbers, letters, or graphics to encourage children to learn. The foam puzzle mats were not only found in homes but were also used in some off-campus hobby classes.<br><br>
-		I remember that I took a drawing class when I was small. During breaks, we could go to the lounge and there was a big foam puzzle mat on the floor. So whenever I see a foam puzzle mat, I think of that lounge. I think of the laughter of the children; the sound of toys colliding; the afternoon sunlight that came through the window; the obvious foamy smell of the mat caused by the warm sunlight; and the fact that we had to take off our shoes when we entered that lounge, so the smell of that mat was not good sometimes. Even so, I miss that carefree time.<br><br>
-        Later, parents' requirements for children's products continued to increase, and this kind of foam mat was recognized as an unhealthy product, so fewer and fewer people used it.</p>
+<div class="container">
+	<div class="image-container left">
+		<img src="pz1.png" alt="water tower" width="450" height="450" class="image">
+        <img src="pz3.png" alt="water tower" width="450" height="450" class="image">
     </div>
+
+	<div class="content-container">
+		<h1>FOAM PUZZLE MAT</h1>
+	    <h3>soft mat for children</h3>
+	
+	    <img id="mainImage" class="ri" src="puzzle1.png" >
+
+	    <div class="click"><marquee behavior="alternate" scrolldelay="10">click on the mat!</marquee></div>
+ 
+	    <div class="text">
+	    	<p>This kind of foam puzzle mat was very popular when I was a child. Many families that had young children bought this mat because it was soft enough to protect children from falling and getting hurt. Children liked the bright colors on the mat. Also, many mats were printed with numbers, letters, or graphics to encourage children to learn. The foam puzzle mats were not only found in homes but were also used in some off-campus hobby classes.<br><br>
+		    I remember that I took a drawing class when I was small. During breaks, we could go to the lounge and there was a big foam puzzle mat on the floor. So whenever I see a foam puzzle mat, I think of that lounge. I think of the laughter of the children; the sound of toys colliding; the afternoon sunlight that came through the window; the obvious foamy smell of the mat caused by the warm sunlight; and the fact that we had to take off our shoes when we entered that lounge, so the smell of that mat was not good sometimes. Even so, I miss that carefree time.<br><br>
+            Later, parents' requirements for children's products continued to increase, and this kind of foam mat was recognized as an unhealthy product, so fewer and fewer people used it.</p>
+        </div>
+    </div>
+
+    <div class="image-container right">
+    	<img src="pz4.png" alt="water tower" width="450" height="750" class="image">
+        <img src="pz2.png" alt="water tower" width="450" height="750" class="image">
+    </div>
+</div>
 
 <br><br>
 
-	<script src="main.js" defer></script>
+<footer>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">previous</a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">next</a>
+</footer>
+
+<script src="main.js" defer></script>
 
 </body>
 </html>
