--- a/entries/entry8/index.html
+++ b/entries/entry8/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+
 <div class="container">
 	<div class="image-container left">
-		<img src="pz1.png" alt="water tower" width="450" height="450" class="image">
-        <img src="pz3.png" alt="water tower" width="450" height="450" class="image">
+		<img src="pz1.png" alt="puzzle1" width="450" height="450" class="image">
+        <img src="pz3.png" alt="puzzle3" width="450" height="450" class="image">
     </div>
 
 	<div class="content-container">
@@ -33,8 +34,8 @@
     </div>
 
     <div class="image-container right">
-    	<img src="pz4.png" alt="water tower" width="450" height="750" class="image">
-        <img src="pz2.png" alt="water tower" width="450" height="750" class="image">
+    	<img src="pz4.png" alt="puzzle4" width="450" height="750" class="image">
+        <img src="pz2.png" alt="puzzle2" width="450" height="750" class="image">
     </div>
 </div>
 
@@ -48,4 +49,3 @@
 
 </body>
 </html>
-
