--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -11,6 +11,10 @@
 
 <body>
 
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+
 <h1 style="text-align:center;">WATER RING TOSS HANDHELD GAME</h1>
 <h2 style="text-align:center;">a vintage toy</h2>
 
@@ -33,14 +37,22 @@
   </div>
 </div>
 
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+<img src="bb.png" alt="floating-image" class="floating-image">
+
 <footer>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">previous</a>
-    <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
-    <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">next</a>
+  &nbsp;
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">previous</a> &nbsp;&nbsp;&nbsp;
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a> &nbsp;&nbsp;&nbsp;
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">next</a>
+  &nbsp;
+</footer>
 
 </body>
 </html>
-
-
