--- a/homepage/index.html
+++ b/homepage/index.html
@@ -27,10 +27,15 @@ div.scrollmenu a:hover {
   background-color: #0129CB;
 }
 
+
 </style>
+
+<link rel="icon" type="image/png" href="b1.png">
+
 </head>
 
 <body>
+
 
 <h1> FRAGMENTS OF CHILDHOOD MEMORIES </h1>
 
@@ -58,14 +63,35 @@ div.scrollmenu a:hover {
 	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">Who has the biggest bubble?</a></p>
 </div>
 
+<div class="ordered-text" id="text7">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">Who has the biggest bubble?</a></p>
+</div>
+
+<div class="ordered-text" id="text8">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">Who has the biggest bubble?</a></p>
+</div>
+
+<div class="ordered-text" id="text9">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">Who has the biggest bubble?</a></p>
+</div>
+
+<div class="ordered-text" id="text10">
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry10/">Who has the biggest bubble?</a></p>
+</div>
+
+
 <footer>
 	<div class="scrollmenu">
-		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">1</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">1</a> 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">2</a>
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">3</a>
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">4</a>
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">5</a>
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">6</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">7</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">8</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">9</a>
+		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry10/">10</a>
 	</div>
 
 </body>
