--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/qva6hpy.css">
 <link rel="stylesheet" href="https://use.typekit.net/etz0eof.css">
 <title>Entry 2</title>
+<link rel="icon" type="image/png" href="e2.png">
 </head>
 
 <body>
