--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
 <link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
 <title>Entry 3</title>
+<link rel="icon" type="image/png" href="e3.png">
 </head>
 
 <body>
