--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/amx1ghv.css">
 <link rel="stylesheet" href="https://use.typekit.net/cqb3voq.css">
 <title>Entry 4</title>
+<link rel="icon" type="image/png" href="e4.png">
 </head>
 
 <body>
