--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/kml3rmk.css">
 <link rel="stylesheet" href="https://use.typekit.net/rej8ybj.css">
 <title>Entry 5</title>
+<link rel="icon" type="image/png" href="e5.png">
 </head>
 
 <body>
