--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/lzl1qyk.css">
 <link rel="stylesheet" href="https://use.typekit.net/itf6tgz.css">
 <title>Entry 6</title>
+<link rel="icon" type="image/png" href="e6.png">
 </head>
 
 <body>
