--- a/entries/entry7/index.html
+++ b/entries/entry7/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/pvz7ouz.css">
 <link rel="stylesheet" href="https://use.typekit.net/pvz7ouz.css">
 <title>Entry 7</title>
+<link rel="icon" type="image/png" href="e7.png">
 </head>
 
 <body>
