--- a/entries/entry8/index.html
+++ b/entries/entry8/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/eeg3eup.css">
 <link rel="stylesheet" href="https://use.typekit.net/ttu5lbl.css">
 <title>Entry 8</title>
+<link rel="icon" type="image/png" href="e8.png">
 </head>
 
 <body>
