--- a/entries/entry9/index.html
+++ b/entries/entry9/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/wmd2oau.css">
 <link rel="stylesheet" href="https://use.typekit.net/per6izk.css">
 <title>Entry 9</title>
+<link rel="icon" type="image/png" href="e9.png">
 </head>
 
 <body>
