--- a/entries/entry10/index.html
+++ b/entries/entry10/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/atv7ftb.css">
 <link rel="stylesheet" href="https://use.typekit.net/ypw5rfb.css">
 <title>Entry 10</title>
+<link rel="icon" type="image/png" href="e10.png">
 </head>
 
 <body>
