--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,36 +6,10 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://use.typekit.net/tiv2nqj.css">
 <title>Aimee Homepage</title>
-
-<style type="text/css">
-
-div.scrollmenu {
-  background-color: #224DFE;
-  overflow: auto;
-  white-space: nowrap;
-}
-
-div.scrollmenu a {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-}
-
-div.scrollmenu a:hover {
-  background-color: #0129CB;
-}
-
-
-</style>
-
 <link rel="icon" type="image/png" href="b1.png">
-
 </head>
 
 <body>
-
 
 <h1> FRAGMENTS OF CHILDHOOD MEMORIES </h1>
 
@@ -64,35 +38,46 @@ div.scrollmenu a:hover {
 </div>
 
 <div class="ordered-text" id="text7">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">Who has the biggest bubble?</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">Drink something sweet.</a></p>
 </div>
 
 <div class="ordered-text" id="text8">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">Who has the biggest bubble?</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">Is it comfortable to have something soft under your feet?</a></p>
 </div>
 
 <div class="ordered-text" id="text9">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">Who has the biggest bubble?</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">Do you see that tower in the distance?</a></p>
 </div>
 
 <div class="ordered-text" id="text10">
-	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry10/">Who has the biggest bubble?</a></p>
+	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry10/">Put on the glass slippers!</a></p>
 </div>
-
 
 <footer>
 	<div class="scrollmenu">
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">1</a> 
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">2</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">3</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">4</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">5</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">6</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry7/">7</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">8</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">9</a>
+		&nbsp; 
 		<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry10/">10</a>
 	</div>
+</footer>
+
+<script src="main.js" defer></script>
 
 </body>
 </html>
