--- a/shadow/index.html
+++ b/shadow/index.html
@@ -1,3 +1,36 @@
 阴翳礼赞
 In Praise of Shadow
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<title>In praise of shadow</title>
+</head>
+
+<div class="1">
+    阴
+</div>
+
+<div class="2">
+    翳
+</div>
+
+<div class="3">
+    礼
+</div>
+
+<div class="4">
+    赞
+</div>
+
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">2</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">3</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">4</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p5/">5</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">6</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p7/">7</a>
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">8</a>
 
