--- a/shadow/index.html
+++ b/shadow/index.html
@@ -1,31 +1,33 @@
-阴翳礼赞
-In Praise of Shadow
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="main.css">
-<title>In praise of shadow</title>
-</head>
-
-<div class="1">
-    阴
-</div>
-
-<div class="2">
-    翳
-</div>
-
-<div class="3">
-    礼
-</div>
-
-<div class="4">
-    赞
-</div>
-
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="main.css" />
+    <script>
+        (function(d) {
+          var config = {
+            kitId: 'sbc4txu',
+            scriptTimeout: 3000,
+            async: true
+          },
+          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+      </script>
+  </head>
+  
+  <body>
+    <div class="element">
+      <div class="element-wrapper">
+        <div class="div">
+          <div class="text-wrapper">陰</div>
+          <div class="text-wrapper-2">翳</div>
+          <div class="text-wrapper-3">礼</div>
+          <div class="text-wrapper-4">讃</div>
+          <div class="text-wrapper-5">い<br />ん<br />え<br />い<br />ら<br />い<br />さ<br />ん</div>
+        </div>
+      </div>
+    </div>
+ <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">2</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">3</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">4</a>
@@ -33,4 +35,10 @@ In Praise of Shadow
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">6</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p7/">7</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">8</a>
+  </body>
+</html>
+
+
+
+
 
