--- a/shadow/index.html
+++ b/shadow/index.html
@@ -16,6 +16,7 @@
   </head>
   
   <body>
+
     <div class="element">
       <div class="element-wrapper">
         <div class="div">
@@ -27,7 +28,9 @@
         </div>
       </div>
     </div>
- <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a>
+
+<div class="links">
+<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">2</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">3</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">4</a>
@@ -35,9 +38,10 @@
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">6</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p7/">7</a>
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">8</a>
-  </body>
-</html>
+</div>
 
+</body>
+</html>
 
 
 
