--- a/pages/p2/index.html
+++ b/pages/p2/index.html
@@ -1,3 +1,38 @@
-In making for ourselves a place to live, we first spread a parasol to throw a shadow on the earth, and in the pale light of the shadow we put together a house. There are of course roofs on Western houses too, but they are less to keep off the sun than to keep off the wind and the dew; even from without it is apparent that they are built to create as few shadows as possible and to expose the interior to as much light as possible. If the roof of a Japanese house is a parasol, the roof of a Western house is no more than a cap, with as small a visor as possible so as to allow the sunlight to penetrate directly beneath the eaves. 
-<br>
-There are no doubt all sorts of reasons-climate, building materials-for the deep Japanese eaves. The fact that we did not use glass, concrete, and bricks, for instance, made a low roof necessary to keep off the driving wind and rain. A light room would no doubt have been more convenient for us, too, than a dark room. The quality that we call beauty, however, must always grow from the realities of life, and our ancestors, forced to live in dark rooms, presently came to discover beauty in shadows, ultimately to guide shadows towards beauty's ends.
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+
+        <link rel="stylesheet" href="main.css" />
+    </head>
+    <body>
+        <div class="element">
+            <div class="overlap-group-wrapper">
+                <div class="overlap-group">
+                    <img class="ellipse" src="img/ellipse-3.svg" />
+                    <div class="div"></div>
+                    <p class="text-wrapper">
+                        In making for ourselves a place to live, we first spread a parasol to throw a shadow on the earth, and in
+                        the pale light of the shadow we put together a house. There are of course roofs on Western houses too, but
+                        they are less to keep off the sun than to keep off the wind and the dew; even from without it is apparent
+                        that they are built to create as few shadows as possible and to expose the interior to as much light as
+                        possible. If the roof of a Japanese house is a parasol, the roof of a Western house is no more than a cap,
+                        with as small a visor as possible so as to allow the sunlight to penetrate directly beneath the eaves.
+                    </p>
+                    <p class="there-are-no-doubt">
+                        There are no doubt all sorts of reasons-climate, building materials-for the deep Japanese eaves. The fact
+                        that we did not use glass, concrete, and bricks, for instance, made a low roof necessary to keep off the
+                        driving wind and rain. A light room would no doubt have been more convenient for us, too, than a dark room.
+                        The quality that we call beauty, however, must always grow from the realities of life, and our ancestors,
+                        forced to live in dark rooms, presently came to discover beauty in shadows, ultimately to guide shadows
+                        towards beauty&#39;s ends.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <a href="https://aimeeyi01.github.io/aimeeyi.github.io/shadow/p3/">next</a>
+    </body>
+</html>
+
+
+
