--- a/pages/p2/index.html
+++ b/pages/p2/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <a href="https://aimeeyi01.github.io/aimeeyi.github.io/shadow/p3/">next</a>
+        <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">next</a>
     </body>
 </html>
 
