--- a/pages/p3/index.html
+++ b/pages/p3/index.html
@@ -9,12 +9,14 @@
         <div class="element">
             <div class="div">
                 <div class="rectangle"></div>
-                <div class="overlap-group">
-                    <img class="img" src="img/rectangle-22.svg" />
-                    <div class="rectangle-2"></div>
-                    <div class="rectangle-3"></div>
+                <div class="rectangle-2"></div>
+                <div class="component">
+                    <div class="overlap-group">
+                        <img class="img" src="window.svg" />
+                        <div class="rectangle-3"></div>
+                        <div class="rectangle-4"></div>
+                    </div>
                 </div>
-                <div class="rectangle-4"></div>
                 <p class="and-so-it-has-come">
                     And so it has come to be that the beauty of a Japanese room depends on a variation of shadows, heavy shadows
                     against light shadows-it has nothing else. Westerners are amazed at the simplicity of Japanese rooms,
@@ -38,5 +40,6 @@
         </div>
     </body>
 </html>
+
 
 <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">next</a>
