--- a/pages/p2/index.html
+++ b/pages/p2/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8" />
-
+        <link rel="stylesheet" href="globals.css" />
         <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <div class="element">
             <div class="overlap-group-wrapper">
                 <div class="overlap-group">
-                    <img class="ellipse" src="img/ellipse-3.svg" />
-                    <div class="div"></div>
+                    <img class="ellipse" src="Ellipse1.svg" />
+                    <img class="img" src="Ellipse2.svg" />
                     <p class="text-wrapper">
                         In making for ourselves a place to live, we first spread a parasol to throw a shadow on the earth, and in
                         the pale light of the shadow we put together a house. There are of course roofs on Western houses too, but
@@ -30,6 +30,9 @@
                 </div>
             </div>
         </div>
+    </body>
+</html>
+
         <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">next</a>
     </body>
 </html>
