--- a/shadow/index.html
+++ b/shadow/index.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="main.css" />
-    <script>
-        (function(d) {
-          var config = {
-            kitId: 'sbc4txu',
-            scriptTimeout: 3000,
-            async: true
-          },
-          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-      </script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>InPraiseofShadowshome</title>
   </head>
   
   <body>
-
     <div class="element">
-      <div class="element-wrapper">
+      <div class="elementwrap">
         <div class="div">
-          <div class="text-wrapper">陰</div>
-          <div class="text-wrapper-2">翳</div>
-          <div class="text-wrapper-3">礼</div>
-          <div class="text-wrapper-4">讃</div>
-          <div class="text-wrapper-5">い<br />ん<br />え<br />い<br />ら<br />い<br />さ<br />ん</div>
+          <div class="textwrap1">陰</div>
+          <div class="textwrap2">翳</div>
+          <div class="textwrap3">礼</div>
+          <div class="textwrap4">讃</div>
+          <div class="textwrap5">い<br />ん<br />え<br />い<br />ら<br />い<br />さ<br />ん</div>
+          <p class="In">In Praise of Shadows by Jun&#39;ichirō Tanizaki</p>
+          <div class="textwrap6"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a></div>
+          <div class="textwrap7"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">2</a></div>
+          <div class="textwrap8"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">3</a></div>
+          <div class="textwrap9"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">4</a></div>
+          <div class="textwrap10"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p5/">5</a></div>
+          <div class="textwrap11"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">6</a></div>
+          <div class="textwrap12"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p7/">7</a></div>
+          <div class="textwrap13"><a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">8</a></div>
         </div>
       </div>
     </div>
+  </body>
 
-<div class="links">
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p1/">1</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">2</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">3</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">4</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p5/">5</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">6</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p7/">7</a>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">8</a>
-</div>
-
-</body>
 </html>
+
+
 
 
 
