--- a/pages/p1/index.html
+++ b/pages/p1/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="main.css" />
-   
-    <script>
-        (function(d) {
-          var config = {
-            kitId: 'sbc4txu',
-            scriptTimeout: 3000,
-            async: true
-          },
-          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-      </script>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>Page1</title>
   </head>
 
-<div style="width: 100%; height: 100%; position: relative; background: white">
-    <div style="width: 2305px; height: 1245px; left: -272px; top: 384px; position: absolute; mix-blend-mode: darken; background: #191919; box-shadow: 200px 200px 200px; filter: blur(200px)"></div>
-    <div style="width: 820px; height: 504px; left: 346px; top: 251px; position: absolute; text-align: center"><span style="color: black; font-size: 16px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 36px; word-wrap: break-word">I possess no specialized knowledge of architecture, but I understand that in the Gothic cathedral of the West, the roof is thrust up and up so as to place its pinnacle as high in the heavens as possible-and that herein is thought to lie its special beauty. <br/></span><span style="color: #7B7B7B; font-size: 16px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 36px; word-wrap: break-word"><br/><br/></span><span style="color: #DADADA; font-size: 16px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 36px; word-wrap: break-word">In the temples of Japan, on the other hand, a roof of heavy tiles is first laid out, and in the deep, spacious shadows created by the eaves the rest of the structure is built. Nor is this true only of temples; in the palaces of the nobility and the houses of the common people, what first strikes the eye is the massive roof of tile or thatch and the heavy darkness that hangs beneath the eaves. Even at midday cavernous darkness spreads over all beneath the roof's edge, making entryway, doors, walls, and pillars all but invisible. The grand temples of Kyoto-Chion'in, Honganji-and the farmhouses of the remote countryside are alike in this respect: like most buildings of the past their roofs give the impression of possessing far greater weight, height, and surface than all that stands beneath the eaves. <br/></span></div>
-</div>
+  <div class="shadow"></div>
 
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">next</a>
+  <div class="p2">
+    In the temples of Japan, on the other hand, a roof of heavy tiles is first laid out, and in the deep, spacious shadows created by the eaves the rest of the structure is built. 
+    Nor is this true only of temples; in the palaces of the nobility and the houses of the common people, what first strikes the eye is the massive roof of tile or thatch and the heavy darkness that hangs beneath the eaves. 
+    Even at midday cavernous darkness spreads over all beneath the roof's edge, making entryway, doors, walls, and pillars all but invisible. 
+    The grand temples of Kyoto-Chion'in, Honganji-and the farmhouses of the remote countryside are alike in this respect: like most buildings of the past their roofs give the impression of possessing far greater weight, height, and surface than all that stands beneath the eaves. 
+  </div>
+
+  <div class="p1">
+    I possess no specialized knowledge of architecture, but I understand that in the Gothic cathedral of the West, the roof is thrust up and up so as to place its pinnacle as high in the heavens as possible-and that herein is thought to lie its special beauty.
+  </div>
+  
+  <div class="next">
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p2/">&rarr;</a>
+  </div>
+  
+</html>
+
+  
+
+
+  
