--- a/pages/p2/index.html
+++ b/pages/p2/index.html
@@ -1,41 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="globals.css" />
-        <link rel="stylesheet" href="main.css" />
-    </head>
-    <body>
-        <div class="element">
-            <div class="overlap-group-wrapper">
-                <div class="overlap-group">
-                    <img class="ellipse" src="Ellipse1.svg" />
-                    <img class="img" src="Ellipse2.svg" />
-                    <p class="text-wrapper">
-                        In making for ourselves a place to live, we first spread a parasol to throw a shadow on the earth, and in
-                        the pale light of the shadow we put together a house. There are of course roofs on Western houses too, but
-                        they are less to keep off the sun than to keep off the wind and the dew; even from without it is apparent
-                        that they are built to create as few shadows as possible and to expose the interior to as much light as
-                        possible. If the roof of a Japanese house is a parasol, the roof of a Western house is no more than a cap,
-                        with as small a visor as possible so as to allow the sunlight to penetrate directly beneath the eaves.
-                    </p>
-                    <p class="there-are-no-doubt">
-                        There are no doubt all sorts of reasons-climate, building materials-for the deep Japanese eaves. The fact
-                        that we did not use glass, concrete, and bricks, for instance, made a low roof necessary to keep off the
-                        driving wind and rain. A light room would no doubt have been more convenient for us, too, than a dark room.
-                        The quality that we call beauty, however, must always grow from the realities of life, and our ancestors,
-                        forced to live in dark rooms, presently came to discover beauty in shadows, ultimately to guide shadows
-                        towards beauty&#39;s ends.
-                    </p>
-                </div>
-            </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>Page2</title>
+  </head>
+
+
+  <body>
+  <div class="element">
+
+    <div class="wrap">
+
+      <div class="group">
+
+        <img class="e1" src="ellipse1.svg" />
+        <img class="e2" src="ellipse2.svg" />
+
+        <p class="p2">
+          There are no doubt all sorts of reasons-climate, building materials-for the deep Japanese eaves. The fact
+          that we did not use glass, concrete, and bricks, for instance, made a low roof necessary to keep off the
+          driving wind and rain. A light room would no doubt have been more convenient for us, too, than a dark room.
+          The quality that we call beauty, however, must always grow from the realities of life, and our ancestors,
+          forced to live in dark rooms, presently came to discover beauty in shadows, ultimately to guide shadows
+          towards beauty&#39;s ends.
+        </p>
+
+        <p class="p1">
+          In making for ourselves a place to live, we first spread a parasol to throw a shadow on the earth, and in
+          the pale light of the shadow we put together a house. There are of course roofs on Western houses too, but
+          they are less to keep off the sun than to keep off the wind and the dew; even from without it is apparent
+          that they are built to create as few shadows as possible and to expose the interior to as much light as
+          possible. If the roof of a Japanese house is a parasol, the roof of a Western house is no more than a cap,
+          with as small a visor as possible so as to allow the sunlight to penetrate directly beneath the eaves.
+        </p>
+
+        <div class="next">
+          <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">&rarr;</a>
         </div>
-    </body>
+
+      </div>
+    </div>
+  </div>
+</body>
+
+
+
+
 </html>
-
-        <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p3/">next</a>
-    </body>
-</html>
-
-
-
