--- a/pages/p2/index.html
+++ b/pages/p2/index.html
@@ -18,8 +18,8 @@
 
       <div class="group">
 
-        <img class="e1" src="ellipse1.svg" />
-        <img class="e2" src="ellipse2.svg" />
+        <img class="e1" src="Ellipse1.svg" />
+        <img class="e2" src="Ellipse2.svg" />
 
         <p class="p2">
           There are no doubt all sorts of reasons-climate, building materials-for the deep Japanese eaves. The fact
