--- a/pages/p5/index.html
+++ b/pages/p5/index.html
@@ -19,7 +19,7 @@
 
     <div class="p2"><p>For the beauty of the alcove is not the work of some clever device. An empty space is marked off with plain wood and plain walls, so that the light drawn into it forms dim shadows within emptiness. There is nothing more. And yet, when we gaze into the darkness that gathers behind the crossbeam, around the flower vase, beneath the shelves, though we know perfectly well it is mere shadow, we are overcome with the feeling that in this small corner of the atmosphere there reigns complete and utter silence; that here in the darkness immutable tranquility holds sway.</p></div>
     
-    <div class="p1"><p>A Japanese room might be likened to an inkwash painting, the paper-paneled shoji being the expanse where the ink is thinnest, and the alcove where it is darkest. Whenever I see the alcove of a tastefully built Japanese room, I marvel at our comprehension of the secrets of shadows, our sensitive use of shadow and light.</p></div>
+    <div class="p1"><p>A Japanese room might be likened to an inkwash painting, the paper-paneled shoji being the expanse where the ink is thinnest, and the alcove where it is darkest. Whenever I see the alcove of a tastefully built Japanese room, I marvel at our comprehension of the secrets of shadows, our sensitive use of shadow and light.</</div>
 
     <div class="next">
         <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">&rarr;</a>
