--- a/pages/p4/index.html
+++ b/pages/p4/index.html
@@ -15,7 +15,7 @@
       <div class="div">
         <div class="group">
           <div class="rectangle"></div>
-          <img class="rec1" src="rectangle14.svg" />
+          <img class="rec1" src="bk.svg" />
           <img class="rec2" src="rectangle15.svg" />
         </div>
 
