--- a/film/index.html
+++ b/film/index.html
@@ -18,123 +18,123 @@
   <div class="grid-container">
 
     <div class="grid-item">
-        <img src="f1.jpeg">
+        <img src="f1.JPEG">
         <p class="large">FRAME 1</p>
         <p class="small">Juxian is looking at Xiaolou and Dieyi in the room.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f2.jpeg">
+        <img src="f2.JPEG">
         <p class="large">FRAME 2</p>
         <p class="small">Xiaolou puts Dieyi's injured hand into the fish tank.<br>The pain can make Dieyi more awake.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f3.jpeg">
+        <img src="f3.JPEG">
         <p class="large">FRAME 3</p>
         <p class="small">The room is messed up by Dieyi. Xiaolou ties him up</p>
     </div>
 
     <div class="grid-item">
-        <img src="f4.jpeg">
+        <img src="f4.JPEG">
         <p class="large">FRAME 4</p>
         <p class="small">"How is he?"<br>"We may need to wean him from the opium slowly."</p>
     </div>
 
 
     <div class="grid-item">
-        <img src="f5.jpeg">
+        <img src="f5.JPEG">
         <p class="large">FRAME 5</p>
         <p class="small">"Keep an eye on him. Don't let him escape."</p>
     </div>
 
     <div class="grid-item">
-        <img src="f6.jpeg">
+        <img src="f6.JPEG">
         <p class="large">FRAME 6</p>
         <p class="small">"Don't go, Xiaolou."</p>
     </div>
 
     <div class="grid-item">
-        <img src="f7.jpeg">
+        <img src="f7.JPEG">
         <p class="large">FRAME 7</p>
         <p class="small">"If he really wants to overcome his addiction..."</p>
     </div>
 
     <div class="grid-item">
-        <img src="f8.jpeg">
+        <img src="f8.JPEG">
         <p class="large">FRAME 8</p>
         <p class="small">"He will be more painful later."</p>
     </div>
 
 
     <div class="grid-item">
-        <img src="f9.jpeg">
+        <img src="f9.JPEG">
         <p class="large">FRAME 9</p>
         <p class="small">Juxian listens to the sound inside.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f10.jpeg">
+        <img src="f10.JPEG">
         <p class="large">FRAME 10</p>
         <p class="small">Dieyi calms down.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f11.jpeg">
+        <img src="f11.JPEG">
         <p>FRAME 11</p>
         <p class="small">Juxian goes into the room to see Dieyi.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f12.jpeg">
+        <img src="f12.JPEG">
         <p class="large">FRAME 12</p>
         <p class="small">She sees a smashed photo frame.<br>It is the photo of Dieyi and Xiaolou.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f13.jpeg">
+        <img src="f13.JPEG">
         <p class="large">FRAME 13</p>
         <p class="small">Juxian is shocked.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f14.jpeg">
+        <img src="f14.JPEG">
         <p class="large">FRAME 14</p>
         <p class="small">She steps forward to see Dieyi.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f15.jpeg">
+        <img src="f15.JPEG">
         <p class="large">FRAME 15</p>
         <p class="small">"It feels like ice."<br><br>Dieyi is delirious, and he dreames of being sent away by his mother when he was a child.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f16.jpeg">
+        <img src="f16.JPEG">
         <p class="large">FRAME 16</p>
         <p class="small">"Mom!<br><br>Dieyi keeps calling his mother.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f17.jpeg">
+        <img src="f17.JPEG">
         <p class="large">FRAME 17</p>
         <p class="small">"The river may get frozen."</p>
     </div>
 
     <div class="grid-item">
-        <img src="f18.jpeg">
+        <img src="f18.JPEG">
         <p class="large">FRAME 18</p>
         <p class="small">"It feels like ice."<br><br>The day Dieyi was sent away by his mother was very cold.<br>He always remembers that day.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f19.jpeg">
+        <img src="f19.JPEG">
         <p class="large">FRAME 19</p>
         <p class="small">Juxian holds Dieyi in her arms, just like a mother holding child.</p>
     </div>
 
     <div class="grid-item">
-        <img src="f20.jpeg">
+        <img src="f20.JPEG">
         <p class="large">FRAME 20</p>
         <p class="small">She cries.</p>
     </div>
