--- a/film/index.html
+++ b/film/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,12 @@
   <link rel="stylesheet" href="https://use.typekit.net/wal7qtf.css">
   <title>CSS Grid</title>
 </head>
+
 <body>
 
 <div class="title">
     <h1>Farewell My Concubine</h1>
-    <h2>In this scene, Cheng Dieyi is addicted to opium. Duan Xiaolou and Juxian help with the drug addiction treatment .</h2>
+    <h2>In this scene, Cheng Dieyi is addicted to opium. Duan Xiaolou and Juxian help with his drug addiction treatment.</h2>
 </div>
 
   <div class="grid-container">
@@ -26,7 +28,7 @@
     <div class="grid-item">
         <img src="f2.JPEG">
         <p class="large">FRAME 2</p>
-        <p class="small">Xiaolou puts Dieyi's injured hand into the fish tank.<br>The pain can make Dieyi more awake.</p>
+        <p class="small">Xiaolou puts Dieyi's injured hand into the fish tank. The pain can make Dieyi more awake.</p>
     </div>
 
     <div class="grid-item">
@@ -40,7 +42,6 @@
         <p class="large">FRAME 4</p>
         <p class="small">"How is he?"<br>"We may need to wean him from the opium slowly."</p>
     </div>
-
 
     <div class="grid-item">
         <img src="f5.JPEG">
@@ -81,14 +82,14 @@
 
     <div class="grid-item">
         <img src="f11.JPEG">
-        <p>FRAME 11</p>
+        <p class="large">FRAME 11</p>
         <p class="small">Juxian goes into the room to see Dieyi.</p>
     </div>
 
     <div class="grid-item">
         <img src="f12.JPEG">
         <p class="large">FRAME 12</p>
-        <p class="small">She sees a smashed photo frame.<br>It is the photo of Dieyi and Xiaolou.</p>
+        <p class="small">She sees a broken picture frame.<br>It is the photo of Dieyi and Xiaolou.</p>
     </div>
 
     <div class="grid-item">
