--- a/film/index.html
+++ b/film/index.html
@@ -34,7 +34,7 @@
     <div class="grid-item">
         <img src="f3.JPEG">
         <p class="large">FRAME 3</p>
-        <p class="small">The room is messed up by Dieyi. Xiaolou ties him up</p>
+        <p class="small">The room is messed up by Dieyi. Xiaolou ties him up.</p>
     </div>
 
     <div class="grid-item">
@@ -66,7 +66,6 @@
         <p class="large">FRAME 8</p>
         <p class="small">"He will be more painful later."</p>
     </div>
-
 
     <div class="grid-item">
         <img src="f9.JPEG">
@@ -107,7 +106,7 @@
     <div class="grid-item">
         <img src="f15.JPEG">
         <p class="large">FRAME 15</p>
-        <p class="small">"It feels like ice."<br><br>Dieyi is delirious, and he dreames of being sent away by his mother when he was a child.</p>
+        <p class="small">"It feels like ice."<br><br>Dieyi is delirious, and he dreams of being sent away by his mother when he was a child.</p>
     </div>
 
     <div class="grid-item">
@@ -125,13 +124,13 @@
     <div class="grid-item">
         <img src="f18.JPEG">
         <p class="large">FRAME 18</p>
-        <p class="small">"It feels like ice."<br><br>The day Dieyi was sent away by his mother was very cold.<br>He always remembers that day.</p>
+        <p class="small">"It feels like ice."<br><br>The day Dieyi was sent away by his mother was very cold. He always remembers that day.</p>
     </div>
 
     <div class="grid-item">
         <img src="f19.JPEG">
         <p class="large">FRAME 19</p>
-        <p class="small">Juxian holds Dieyi in her arms, just like a mother holding child.</p>
+        <p class="small">Juxian holds Dieyi in her arms, just like a mother holding her child.</p>
     </div>
 
     <div class="grid-item">
