--- a/2000s/index.html
+++ b/2000s/index.html
@@ -7,18 +7,38 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Archive</title>
+
+  <link rel="stylesheet" href="https://use.typekit.net/bdu6ffn.css">
+  <link rel="stylesheet" href="https://use.typekit.net/bdu6ffn.css">
+  <link rel="stylesheet" href="https://use.typekit.net/bdu6ffn.css">
+  <link rel="stylesheet" href="https://use.typekit.net/bdu6ffn.css">
+
+  <title>Archive2000s</title>
 </head>
 
 <body>
 
-  <div id="container"></div>
+  <header>
+
+    <div class="head"> <a href="https://aimeeyi01.github.io/aimeeyi.github.io/archivehomepage/"> &#8592; HOME </a> </div>
+
+    <div class="head2">AMUSEMENT PARKS OPENED IN AND AFTER THE 2000S</div>
+
+  </header>
+
+  <div id="container"> </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <script src="main.js"></script>
+
+  <footer>
+
+    <div class="foot"> <a href="https://aimeeyi01.github.io/aimeeyi.github.io/1990s/"> NEXT TIME PERIOD &#x2192; </a> </div>
+
+  </footer>
 
 </body>
 
 </html>
 
-X
