--- a/archivehomepage/index.html
+++ b/archivehomepage/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://use.typekit.net/lhy6spq.css">
 <link rel="stylesheet" href="https://use.typekit.net/pty8mrb.css">
-<title>Grid Website</title>
+<title>Archivehome</title>
 
 </head>
 <body>
@@ -46,10 +46,10 @@
 </div>
 
 
-<!-- About 按钮 -->
+
 <button id="aboutBtn">ABOUT</button>
 
-<!-- 弹窗 -->
+
 <div id="popup">
   <div id="popupContent">
     <span id="closeBtn">&times;</span>
@@ -60,7 +60,6 @@
 
     
 
-   
 
 
 <script src="script.js"></script>
