--- a/archivehomepage/index.html
+++ b/archivehomepage/index.html
@@ -46,15 +46,15 @@
 </div>
 
 
-
 <button id="aboutBtn">ABOUT</button>
 
 
 <div id="popup">
   <div id="popupContent">
     <span id="closeBtn">&times;</span>
-    <h2>About Us</h2>
-    <p>This is some information about us.</p>
+
+    <p>This is a website that collects abandoned amusement parks. Amusement parks bring people happiness, but they may not be able to continue operating due to some uncontrollable factors. So some of these parks now lie in decay, with rusted rides and overgrown pathways. They are mysterious and somber, attracting some ruin enthusiasts to explore. I want to document the unique aesthetic of these abandoned amusement parks and reflect on the passage of time. I categorize them according to the year they opened. Each amusement park has a name, location, time, picture, and introduction.</p>
+
   </div>
 </div>
 
