--- a/miku/index.html
+++ b/miku/index.html
@@ -4,19 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://use.typekit.net/mce3eme.css">
-   
-
-   
-
     <title>miku</title>
+
 </head>
 <body>
+<div class="content1">
+    <img src="mikuqs.png" alt="miku">
+</div>
 
+<div class="content2">
     <h1>MIKU'S ClOSET</h1>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/miku/outfit/">GO!</a>
-    <img src="mikumiku.png" alt="Description of the image">
-
-  
+</div>
+    
 
 </body>
 
