--- a/miku/outfit/index.html
+++ b/miku/outfit/index.html
@@ -30,6 +30,7 @@
         </div>
         <div class="controls">
           <button id="prevBtn" onclick="prevOutfit()">Previous</button>
+          <button id="homeBtn" onclick="goHome()">Home</button>
           <button id="nextBtn" onclick="nextOutfit()">Next</button>
         </div>
       </div>
