--- a/miku/outfit/index.html
+++ b/miku/outfit/index.html
@@ -35,7 +35,8 @@
         </div>
       </div>
 
-    
+    <img id="movingGif" src="chibi.gif" alt="Moving GIF">
+
 
     <script src="script.js" defer></script>
 
