--- a/miku/index.html
+++ b/miku/index.html
@@ -17,7 +17,21 @@
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/miku/outfit/">GO!</a>
 </div>
     
+<div class="about">
+   
+    <button id="aboutbtn" class="aboutbtn">ABOUT</button>
+
+    <div id="aboutmodal" class="modal">
+        <div class="modalcontent">
+            <span class="close"> &times;</span>
+            <p>Hatsune Miku is a Vocaloid software voicebank developed by Crypton Future Media and its official anthropomorphic character is a 16-year-old girl with long, turquoise twin tails. Miku has different outfits in different songs and this website collects her outfits. The outfits are divided into five categories. Each outfit has its name, its style, and its representative song.</p>
+        </div>
+    </div>
+</div>
+
 
 </body>
+
+<script src="script.js" defer></script>
 
 </html>
