--- a/miku/outfit/index.html
+++ b/miku/outfit/index.html
@@ -22,11 +22,11 @@
         </div>
         <div class="content">
           <div class="info">
-            <h2 id="outfitName"></h2>
+            <h2 id="outfitname"></h2>
             <p id="style"></p>
-            <p id="representativeSong"></p>
+            <p id="representativesong"></p>
           </div>
-          <img id="outfitImage" src="" alt="">
+          <img id="outfitimage" src="" alt="">
         </div>
         <div class="controls">
           <button id="prevBtn" onclick="prevOutfit()">Previous</button>
@@ -36,7 +36,6 @@
       </div>
 
     <img id="movingGif" src="chibi.gif" alt="Moving GIF">
-
 
     <script src="script.js" defer></script>
 
