--- a/film/index.html
+++ b/film/index.html
@@ -20,7 +20,7 @@
   <div class="grid-container">
 
     <div class="grid-item">
-        <img src="test.jpg">
+        <img src="f1.JPEG">
         <p class="large">FRAME 1</p>
         <p class="small">Juxian is looking at Xiaolou and Dieyi in the room.</p>
     </div>
