--- a/cocktailtest/index.html
+++ b/cocktailtest/index.html
@@ -40,7 +40,7 @@
         <div class="ingredient-label" onclick="toggleLabel(this)">Sugar</div>
         <div class="ingredient-label" onclick="toggleLabel(this)">Sugar syrup</div>
         <div class="ingredient-label" onclick="toggleLabel(this)">Salt</div>
-        <div class="ingredient-label" onclick="toggleLabel(this)">Bitter</div>
+        <div class="ingredient-label" onclick="toggleLabel(this)">Bitters</div>
         <div class="ingredient-label" onclick="toggleLabel(this)">Cream</div>
         <div class="ingredient-label" onclick="toggleLabel(this)">Egg white</div>
         <div class="ingredient-label" onclick="toggleLabel(this)">Sprite</div>
