--- a/cocktailtest/about.html
+++ b/cocktailtest/about.html
@@ -4,7 +4,7 @@
    
 body {
     margin: 0;
-    background-color: #fff1c1;
+    background-color: #FFF5D6;
     font-family: "scrivano", serif;
     font-weight: 800;
     font-style: normal;
